# shuttle-blog-tutorials

./: README.md
shuttle-first-ai-tool/: Cargo.toml  data.csv
shuttle-first-ai-tool/src/: main.rs
