[package]
name = "shuttle-first-ai-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
